v3/Web-App/farm-events.md
---
title: "Farm Events"
slug: "farm-events"
description: "Schedule FarmBot actions [my.farmbot.io/app/designer/farm_events](http://my.farmbot.io/app/designer/farm_events)"
---

* toc
{:toc}


# Event scheduling

It would not be convenient for you to manually initiate your sequences every time you want them to execute. This is where event scheduling comes in to help.

If you've ever used a calendar application before, you'll feel right at home with this. Simply choose the sequence you would like to execute, and schedule it to run on a one-off or repeating basis.

![events.png](_images/events.png)



# Create a Farm Event

Press the <span class="fb-circle-button fb-purple">+</span> button to create a new Farm Event.

![farm events.png](_images/farm_events.png)

The **Add Farm Event** screen will appear.

![create event.png](_images/create_event.png)

Select:
* a sequence or regimen to run
* a start time and date
* a repeat interval (if desired)
* a repeat end time and date (if repeating)

![event_filled.png](_images/event_filled.png)



<p>Press the <span class="fb-button fb-purple">SAVE</span> button to add the Farm Event. The Farm Event will now show up in the agenda.</p>



![agenda.png](_images/agenda.png)



<p>Be sure to press the <span class="fb-button fb-yellow">SYNC NOW</span> button at the top of the page to sync the newly created Farm Events with the device so that they can be executed!</p>



# Edit Farm Event

Let's say we have created a `Water` Farm Event that we'd like to make some changes to.

![water.png](_images/water.png)

Press the edit icon to the right of the Farm Event name shown in the figure below.

![edit_icon_cursor.png](_images/edit_icon_cursor.png)



<p>Make the desired changes and press <span class="fb-button fb-purple">SAVE</span>.</p>



![editing.png](_images/editing.png)

The Farm Event will update in the agenda.

![saved.png](_images/saved.png)



<div class="magic-block-callout type-warning fb-callout-css-fix">
	<h3><i title="Warning" class="fa fa-exclamation-circle"></i>Don't forget to SYNC!
	</h3>
	<div class="callout-body"><p>Before your FarmBot can start executing the Farm Events you have created, you will need to share the data with the device. Press the <span class="fb-button fb-yellow">SYNC NOW</span> button in the upper right of the web app. If the sync was successful, the button will display <span class="fb-button fb-green">SYNCED</span>.</p>
	</div>
</div>


# What's next?

 * [Controls](../Web-App/controls.md)
