v6/Web-App/farm-events.md
---
title: "Farm Events"
slug: "farm-events"
description: "Schedule FarmBot actions [my.farm.bot/app/designer/farm_events](https://my.farm.bot/app/designer/farm_events)"
---

* toc
{:toc}


<iframe class="embedly-embed" src="//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2Fvideoseries%3Flist%3DPLMhsMRlKjcNIYlDKDdKvPQuHqBjjS1ZGc&url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DGVb4fYaqy2M&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FGVb4fYaqy2M%2Fhqdefault.jpg&key=02466f963b9b4bb8845a05b53d3235d7&type=text%2Fhtml&schema=youtube" width="854" height="480" scrolling="no" frameborder="0" allowfullscreen></iframe>



# Event scheduling

It would not be convenient for you to manually initiate your sequences every time you want them to execute. This is where event scheduling comes in to help.

If you've ever used a calendar application before, you'll feel right at home with this. Simply choose the sequence you would like to execute, and schedule it to run on a one-off or repeating basis.

![events_overview.png](_images/events_overview.png)



# Create a Farm Event

Press the <span class="fb-circle-button fb-purple">+</span> button to create a new Farm Event.

![farm events.png](_images/farm_events.png)

The **Add Farm Event** screen will appear.

![events_1.png](_images/events_1.png)

Select:
* a sequence or regimen to run
* a start time and date
* a repeat interval (if desired)
* a repeat end time and date (if repeating)

![events_repeat.png](_images/events_repeat.png)

Press the <span class="fb-button fb-purple">SAVE</span> button to add the Farm Event. The Farm Event will now show up in the agenda.

![agenda.png](_images/agenda.png)

Be sure to press the <span class="fb-button fb-yellow">SYNC NOW</span> button at the top of the page to sync the newly created Farm Events with the device so that they can be executed!

# Edit Farm Event

Let's say we have created a `Water` Farm Event that we'd like to make some changes to.

![water.png](_images/water.png)

Press the edit icon to the right of the Farm Event name shown in the figure below.

![edit_icon_cursor.png](_images/edit_icon_cursor.png)

Make the desired changes and press <span class="fb-button fb-purple">SAVE</span>.

![editing.png](_images/editing.png)

The Farm Event will update in the agenda.

![saved.png](_images/saved.png)



{%
include callout.html
type="warning"
title="Don't forget to SYNC"
content="Before your FarmBot can start executing the Farm Events you have created, you will need to share the data with the device. Press the <span class=\"fb-button fb-yellow\">SYNC NOW</span> button in the upper right of the web app. If the sync was successful, the button will display <span class=\"fb-button fb-green\">SYNCED</span>."
%}


# What's next?

 * [Controls](../Web-App/controls.md)
